--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     font-family: "Oxygen", Helvetica, sans-serif;
 }
 
+body {
+    background-color:  #99ddff;
+
+}
+
 .container {
     width: 1000px;
     margin: 0 auto;
@@ -29,9 +34,9 @@ span {
 }
 
 #cloud {
-    width: 700px;
-    height: 400px;
-    background-image: url('../chat-bubble.png');
+    width: 500px;
+    height: 500px;
+    background-image: url('../cloud.png');
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -46,18 +51,19 @@ p {
     opacity: 0.6;*/
     margin-top: 40px;
     margin-left: 15px;
-    width: 500px;
-    height: 230px;
+    width: 480px;
+    height: 360px;
     text-align: center;
-    line-height: 230px;
+    line-height: 350px;
+    padding: 20px;
 }
 
 h1 {
     display: inline-block;
     vertical-align: middle;
     font-size: 22px;
-    line-height: 22px;
+    line-height: 23px;
     font-weight: 300;
     text-align: center;
-    color: gray;
+    color: black;
 }
