--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,9 @@ span {
 }
 
 #cloud {
-    width: 500px;
-    height: 500px;
-    background-image: url('../cloud.png');
+    width: 600px;
+    height: 550px;
+    background-image: url('../images/cloud.png');
     background-repeat: no-repeat;
     background-size: contain;
 
@@ -51,10 +51,10 @@ p {
     opacity: 0.6;*/
     margin-top: 40px;
     margin-left: 15px;
-    width: 480px;
-    height: 360px;
+    width: 580px;
+    height: 450px;
     text-align: center;
-    line-height: 350px;
+    line-height: 410px;
     padding: 20px;
 }
 
@@ -66,4 +66,17 @@ h1 {
     font-weight: 300;
     text-align: center;
     color: black;
+}
+
+#photo {
+    background-color: magenta;
+    width: 450px;
+    height: 430px;
+    position: absolute;
+    right: 80px;
+    top: 180px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
 }
